# triangle_sandbox

./: .gitmodules  CMakeLists.txt  Makefile  README.md  triangle_sandbox.sublime-project
src/: CMakeLists.txt  buffer.cc  buffer.h  compute_pipeline.cc  compute_pipeline.h  context.cc  context.h  drawable.cc  drawable.h  graphics_pipeline.cc  graphics_pipeline.h  macros.h  main.cc  model.cc  model.h  models_location.h.in  pipeline.cc  pipeline.h  renderer.cc  renderer.h  sdl_types.cc  sdl_types.h  shader.cc  shader.h  triangle.cc  triangle.h
src/drawable/: compute.cc  compute.h  model.cc  model.h  model_renderer.cc  model_renderer.h  triangle.cc  triangle.h
src/shaders/: compute.slang  model.slang  sampling.slang  triangle.slang
tools/: xxd.py
tools/cmake/: shader.cmake
